--- a/src/main/resources/template/Entity.vm
+++ b/src/main/resources/template/Entity.vm
@@ -10,6 +10,8 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import org.springframework.format.annotation.DateTimeFormat;
+
 import javax.persistence.Id;
 import java.io.Serializable;
 import java.util.Date;
@@ -53,14 +55,16 @@ public class ${tableInfo.beanName} implements Serializable {
     @JsonDeserialize(using = LongJsonDeserializer.class)
     #end
     #if(${field.type} == "Date")
+    @DateTimeFormat(pattern = "yyyy-MM-dd HH:mm:ss")
     @JsonFormat(pattern = "yyyy-MM-dd HH:mm:ss", timezone = "GMT+8")
     #end
     #if(${field.filed} == "deleted")
     @Builder.Default
     private ${field.type} ${field.property} = 0;
-        #break;
     #end
+    #if(${field.filed} != "deleted")
     private ${field.type} ${field.property};
+    #end
 #end
 
 }
