--- a/src/main/resources/template/ServiceImpl.vm
+++ b/src/main/resources/template/ServiceImpl.vm
@@ -262,8 +262,8 @@ public class ${tableInfo.beanName}ServiceImpl extends BaseScsServiceSupport<${ta
         for (${tableInfo.beanName} ${tableInfo.shortBeanName} : ${tableInfo.shortBeanName}s) {
             ${tableInfo.beanName}Vo ${tableInfo.shortBeanName}Vo = new ${tableInfo.beanName}Vo(${tableInfo.shortBeanName});
             // 创建人
-            ${tableInfo.shortBeanName}Vo.setCreateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()).getUserName());
-            ${tableInfo.shortBeanName}Vo.setUpdateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getUpdateUser()).getUserName());
+            ${tableInfo.shortBeanName}Vo.setCreateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()) == null ? null : userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()).getUserName());
+            ${tableInfo.shortBeanName}Vo.setUpdateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()) == null ? null : userVoMap.get(${tableInfo.shortBeanName}.getUpdateUser()).getUserName());
    #foreach($field in ${tableInfo.tableFields})
        #if(${field.filed} == "skuId")
             // sku信息
@@ -317,8 +317,8 @@ public class ${tableInfo.beanName}ServiceImpl extends BaseScsServiceSupport<${ta
     #end
 #end
 
-        ${tableInfo.shortBeanName}Vo.setCreateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()).getUserName());
-        ${tableInfo.shortBeanName}Vo.setUpdateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getUpdateUser()).getUserName());
+        ${tableInfo.shortBeanName}Vo.setCreateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()) == null ? null : userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()).getUserName());
+        ${tableInfo.shortBeanName}Vo.setUpdateUserDesc(userVoMap.get(${tableInfo.shortBeanName}.getCreateUser()) == null ? null : userVoMap.get(${tableInfo.shortBeanName}.getUpdateUser()).getUserName());
 #foreach($field in ${tableInfo.tableFields})
     #if(${field.filed} == "skuId")
         // sku信息
