--- a/src/main/resources/template/Mapper.xml.vm
+++ b/src/main/resources/template/Mapper.xml.vm
@@ -3,9 +3,9 @@
         "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
 <mapper namespace="${mapperPackage}.${tableInfo.beanName}Mapper">
 
-    <!-- 通用查询结果列-->
-    <sql id="Base_Column_List">
-        ${tableInfo.fileds}
-	</sql>
+##    <!-- 通用查询结果列-->
+##    <sql id="Base_Column_List">
+##        ${tableInfo.fileds}
+##	</sql>
 
 </mapper>
