--- a/src/main/resources/template/Criteria.vm
+++ b/src/main/resources/template/Criteria.vm
@@ -95,10 +95,10 @@ public class ${tableInfo.beanName}Criteria extends BaseCriteria {
         return limitEnd;
     }
 
-    protected abstract static class GeneratedCriteria {
+    protected abstract static class AbstractGeneratedCriteria {
         protected List<Criterion> criteria;
 
-        protected GeneratedCriteria() {
+        protected AbstractGeneratedCriteria() {
             super();
             criteria = new ArrayList<Criterion>();
         }
@@ -214,7 +214,7 @@ public class ${tableInfo.beanName}Criteria extends BaseCriteria {
 
     }
 
-    public static class Criteria extends GeneratedCriteria {
+    public static class Criteria extends AbstractGeneratedCriteria {
 
         protected Criteria() {
             super();
